<resources>
    <string name="app_name">Note</string>
    <string name="your_notes">Your Notes</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or Register Here</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="or_login_here">Or Login Here</string>
    <string name="logout">logout</string>
    <string name="note_title">Note Title</string>
    <string name="date_of_note">date of note</string>
    <string name="note_content_here">Note Content</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_menus">action menus</string>
</resources>
