<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="3pt"
    android:background="@color/grey"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="10pt"
        android:id="@+id/wrp_note"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
        <TextView
            android:layout_width="0dp"
            android:textSize="17sp"
            android:layout_weight="1"
            android:id="@+id/txt_title"
            android:layout_height="wrap_content"
            android:text="@string/note_title"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btn_action"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:contentDescription="@string/action_menus" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:id="@+id/txt_date"
            android:layout_marginBottom="5pt"
            android:textColor="@color/colorAccent"
            android:text="@string/date_of_note"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/txt_desc"
            android:layout_height="wrap_content"
            android:text="@string/note_content_here"/>

    </LinearLayout>

</LinearLayout>